[gd_scene load_steps=7 format=3 uid="uid://csfqccuela8ls"]

[ext_resource type="Script" path="res://scenes/objects/Tree.gd" id="1_6avf4"]
[ext_resource type="Texture2D" uid="uid://d1cketcuto1ni" path="res://assets/MiniWorldSprites/Nature/Trees.png" id="2_r5icr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3vc7"]
size = Vector2(19.25, 9.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_oba62"]
radius = 15.0333

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tubn"]
bg_color = Color(0, 0.721569, 0.337255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3jbb"]
bg_color = Color(0.85098, 0.505882, 0.141176, 1)

[node name="Tree" type="StaticBody2D"]
script = ExtResource("1_6avf4")

[node name="Trees" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_r5icr")
hframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 9)
shape = SubResource("RectangleShape2D_j3vc7")

[node name="ChopArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChopArea"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_oba62")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = -18.0
offset_right = 12.0
offset_bottom = -15.0
theme_override_styles/background = SubResource("StyleBoxFlat_7tubn")
theme_override_styles/fill = SubResource("StyleBoxFlat_j3jbb")
value = 50.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="ChopArea" to="." method="_on_crop_area_body_entered"]
[connection signal="body_exited" from="ChopArea" to="." method="_on_crop_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
